[package]
name = "peview"
description = "A minimal and fast zero-copy parser for the PE32+ file format."

keywords = ["parser", "pe", "object", "executable"]
categories = ["parser-implementations", "no-std"]

version = "0.1.0"
edition = "2021"

repository = "https://github.com/kedom1337/peview"
license = "MIT"
